# book-CPP

./: LICENSE  README.md
docs/: hello.txt
src/: CMakeLists.txt  main.cpp
src/ProjectVS/: ProjectVS.sln
src/ProjectVS/20221226/: 20221226.vcxproj  20221226.vcxproj.filters  Main.cpp  Main26.cpp
src/ProjectVS/20221226/x64/Debug/: 20221226.exe.recipe  20221226.ilk  main.obj.enc  vc143.idb
src/ProjectVS/20221228/: 20221228.vcxproj  20221228.vcxproj.filters  Main.cpp  Main28.cpp
src/ProjectVS/20221228/x64/Debug/: 20221228.exe.recipe  20221228.ilk  vc143.idb
src/ProjectVS/20221229/: 20221229.vcxproj  Main.cpp
src/ProjectVS/20221229/x64/Debug/: 20221229.exe.recipe  20221229.ilk  vc143.idb
src/ProjectVS/20230104/: 20230104.vcxproj  Main.cpp
src/ProjectVS/20230104/x64/Debug/: 20230104.exe.recipe  20230104.ilk  vc143.idb
src/ProjectVS/20230106/: 20230106.vcxproj  Main.cpp
src/ProjectVS/20230106/x64/Debug/: 20230106.exe.recipe  20230106.ilk  vc143.idb
src/ProjectVS/20230110/: 20230110.vcxproj  Main.cpp
src/ProjectVS/20230110-2/: 20230110-2.vcxproj  Main.cpp
src/ProjectVS/20230110/x64/Debug/: 20230110-1.exe.recipe  20230110-1.ilk  vc143.idb
src/ProjectVS/matplotlibExample/: matplotlibExample.vcxproj  matplotlibExample.vcxproj.filters  mplMain.cpp
src/ProjectVS/matplotlibExample/Debug/: vc143.idb
src/ProjectVS/matplotlibExample/x64/Debug/: vc143.idb
src/Solution1/: Solution1.sln
src/Solution1/ConsoleApplication1/: ConsoleApplication1.vcxproj
src/Solution1/ConsoleApplication2/: ConsoleApplication2.vcxproj
src/src/: mainProject1.cpp
(+44 files in other folders)
